@@ -66,7 +66,9 @@ export(
        onestep.dens,
        gillespie.sim,
        sobol,
+       sobolDesign,
        sobol.design,
+       sliceDesign,
        slice.design,
        profileDesign,
        profile.design,
