@@ -20,3 +20,9 @@
 * Parallel 'pfilter' algorithm.
 
 * Add LPA model example.
+
+* Extended Kalman filter.
+
+* Plugin for compartmental models.
+
+* Adaptive particle numbers in pfilter.
